--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3531,9 +3531,9 @@ button {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
+    -webkit-box-align: baseline;
+    -ms-flex-align: baseline;
+    align-items: baseline;
     margin-top: 19px;
 }
 
@@ -3550,9 +3550,9 @@ button {
 }
 
 .testimonials-one__single-client-info-img .icon {
-    position: absolute;
+    /* position: absolute;
     top: -25px;
-    right: -25px;
+    right: -25px; */
     width: 30px;
     height: 30px;
     line-height: 26px;
@@ -3573,7 +3573,7 @@ button {
 .testimonials-one__single-client-info-title {
     position: relative;
     display: block;
-    padding-left: 38px;
+    padding-left: 20px;
 }
 
 .testimonials-one__single-client-info-title h4 {
