--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Cultibaterre
+Theme Name: CultibaTerre
 Author: Code House
-Description: Ce thème est développé pour le site web de Cultibaterre
+Description: Ce thème est développé pour le site web de CultibaTerre
 Version: 1.0
 */
